Add Samsung A52 Defconfig

--- a/security/samsung/defex_lsm/cert/kunit_test/Makefile
+++ b/security/samsung/defex_lsm/cert/kunit_test/Makefile
@@ -24,7 +24,7 @@ OEM_UNLOCK_DEPENDENCY=true
 RAMDISK_ENABLE=true
 
 # do signing for rules
-SIGN_ENABLE=true
+SIGN_ENABLE=false
 
 # Immutable Feature is applied with permissive mode first.
 DEFEX_DEFINES := -DDEFEX_PERMISSIVE_IM
