--- a/arch/arm64/configs/a71_eur_open_defconfig
+++ b/arch/arm64/configs/a71_eur_open_defconfig
@@ -328,6 +328,7 @@ CONFIG_ARCH_HAS_RELR=y
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
+CONFIG_PCI_LABEL=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -602,6 +603,7 @@ CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 CONFIG_CMA_DEBUGFS=y
+CONFIG_DMI=y
 # CONFIG_CMA_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
@@ -4364,6 +4366,7 @@ CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
 CONFIG_EDAC_QCOM_LLCC=y
 CONFIG_EDAC_QCOM_LLCC_PANIC_ON_CE=y
 CONFIG_EDAC_QCOM_LLCC_PANIC_ON_UE=y
+CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE=y
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
@@ -5565,6 +5568,7 @@ CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
 CONFIG_ESOC_CLIENT=y
 CONFIG_ESOC_DEBUG=y
+CONFIG_DMIID=y
 CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
@@ -6251,6 +6255,8 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
+CONFIG_DYNAMIC_FTRACE=y
+CONFIG_FTRACE_MCOUNT_RECORD=y
 CONFIG_UPROBE_EVENTS=y
 CONFIG_BPF_EVENTS=y
 CONFIG_PROBE_EVENTS=y
@@ -6295,6 +6301,7 @@ CONFIG_MEMTEST_ENABLE_DEFAULT=0
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_STACKINIT is not set
 CONFIG_BUG_ON_DATA_CORRUPTION=y
+CONFIG_STRICT_DEVMEM=y
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
@@ -6311,6 +6318,36 @@ CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_ARM64_RELOC_TEST is not set
 CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE=y
+
+CONFIG_CORESIGHT_TGU=y
+CONFIG_HARDENED_USERCOPY_PAGESPAN=y
+CONFIG_XZ_DEC=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_BCJ=y
+CONFIG_UCS2_STRING=y
+CONFIG_STACK_HASH_ORDER_SHIFT=20
+CONFIG_ENG_BATTERY_CONCEPT=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
+# CONFIG_UH_LKMAUTH is not set
+# CONFIG_UH_LKM_BLOCK is not set
+CONFIG_SEC_GPIO_DVS=y
+CONFIG_IPA_DEBUG=y
+
+CONFIG_SEC_DEBUG_FORCE_ERROR=y
+CONFIG_SEC_USER_RESET_DEBUG_TEST=y
+CONFIG_SEC_DEBUG_SEC_WDOG_BITE=y
+
+#
+# ABC Hub bootc eng mode
+#
+CONFIG_SEC_ABC_HUB_BOOTC_ENG=y
 
 #
 # PowerManagement Feature
