--- a/arch/arm64/boot/dts/qcom/atoll-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll-idp.dtsi
@@ -14,6 +14,7 @@
 #include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 #include <dt-bindings/iio/qcom,spmi-vadc.h>
 #include <dt-bindings/input/input.h>
+#include "atoll-camera-sensor-idp.dtsi"
 #include "atoll-sde-display.dtsi"
 #include "sdmmagpie-thermal-overlay.dtsi"
 
@@ -47,7 +48,6 @@
 	};
 };
 
-/*
 &usb0 {
 	extcon = <&pm6150_pdphy>, <&pm6150_charger>, <&eud>;
 };
@@ -55,7 +55,6 @@
 &usb_qmp_dp_phy {
 	extcon = <&pm6150_pdphy>;
 };
-*/
 
 &ufsphy_mem {
 	compatible = "qcom,ufs-phy-qmp-v3";
@@ -200,7 +199,7 @@
 };
 
 &soc {
-	gpio_key:gpio_keys {
+	gpio_keys {
 		compatible = "gpio-keys";
 		label = "gpio-keys";
 
