--- a/arch/arm64/boot/dts/qcom/pm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm6150.dtsi
@@ -212,6 +212,9 @@
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
+/* FIXME: b/144553297
+ * It looks like /delete-property/ in sm7150-sunfish-battery.dtsi
+ * cannot overlay the node. Temporarily disable it here.
 				interrupts =
 					<0x0 0x10 0x0 IRQ_TYPE_EDGE_RISING>,
 					<0x0 0x10 0x1 IRQ_TYPE_EDGE_RISING>,
@@ -230,6 +233,7 @@
 						  "fg-fvcal-qualified",
 						  "vph-alarm",
 						  "vph-drop-prechg";
+*/
 			};
 
 			qcom,dcdc@1100 {
@@ -256,6 +260,9 @@
 
 			qcom,batif@1200 {
 				reg = <0x1200 0x100>;
+/* FIXME: b/144553297
+ * It looks like /delete-property/ in sm7150-sunfish-battery.dtsi
+ * cannot overlay the node. Temporarily disable it here.
 				interrupts =
 					<0x0 0x12 0x0 IRQ_TYPE_EDGE_RISING>,
 					<0x0 0x12 0x2 IRQ_TYPE_EDGE_BOTH>,
@@ -272,6 +279,7 @@
 						  "bat-terminal-missing",
 						  "buck-oc",
 						  "vph-ov";
+*/
 			};
 
 			qcom,usb@1300 {
@@ -359,6 +367,7 @@
 						  "temp-change",
 						  "temp-change-smb";
 			};
+
 			qcom,sdam@b100 {
 				reg = <0xb100 0x100>;
 				interrupts =
@@ -415,8 +424,6 @@
 			qcom,vbatt-empty-mv = <3000>;
 			qcom,vbatt-empty-cold-mv = <3000>;
 			qcom,s3-entry-fifo-length = <2>;
-			qcom,s3-entry-ibat-ua = <15000>;
-			qcom,s3-exit-ibat-ua = <35000>;
 
 			qcom,pmic-revid = <&pm6150_revid>;
 			io-channels = <&pm6150_vadc ADC_BAT_THERM_PU2>,
@@ -451,10 +458,14 @@
 			reg = <0x1d00 0x100>;
 			interrupts = <0x0 0x1d 0x0 IRQ_TYPE_NONE>,
 					<0x0 0x1d 0x1 IRQ_TYPE_NONE>,
+					<0x0 0x1d 0x0 IRQ_TYPE_NONE>,
+					<0x0 0x1d 0x1 IRQ_TYPE_NONE>,
 					<0x0 0x1d 0x2 IRQ_TYPE_NONE>;
-			interrupt-names = "bcl-lvl0",
-						"bcl-lvl1",
-						"bcl-lvl2";
+			interrupt-names = "bcl-ibat-lvl0",
+						"bcl-ibat-lvl1",
+						"bcl-vbat-lvl0",
+						"bcl-vbat-lvl1",
+						"bcl-vbat-lvl2";
 			#thermal-sensor-cells = <1>;
 		};
 
@@ -498,16 +509,6 @@
 			gpio-controller;
 			#gpio-cells = <2>;
 			qcom,gpios-disallowed = <5 6 9 10>;
-
-			afc_switch {
-				gpio1_afc_switch_default: gpio1_afc_switch_default {
-					pins = "gpio1";		/* GPIO 1 */
-					function = "normal";	/* normal output */
-					power-source = <0>;	/* VIN0 */
-					output-low;		/* digital output, no invert */
-					input-disable;		/* prevent GPIO from being set to DIO */
-				};
-			};
 		};
 
 		pm6150_rtc: qcom,pm6150_rtc {
@@ -537,7 +538,7 @@
 		pm6150_vib: qcom,vibrator@5300 {
 			compatible = "qcom,qpnp-vibrator-ldo";
 			reg = <0x5300 0x100>;
-			qcom,vib-ldo-volt-uv = <3300000>;
+			qcom,vib-ldo-volt-uv = <3000000>;
 			qcom,disable-overdrive;
 		};
 	};
@@ -571,7 +572,7 @@
 	};
 
 	pm6150-ibat-lvl0 {
-		polling-delay-passive = <0>;
+		polling-delay-passive = <100>;
 		polling-delay = <0>;
 		thermal-governor = "step_wise";
 		thermal-sensors = <&pm6150_bcl 0>;
@@ -603,7 +604,7 @@
 	};
 
 	pm6150-vbat-lvl0 {
-		polling-delay-passive = <0>;
+		polling-delay-passive = <100>;
 		polling-delay = <0>;
 		thermal-governor = "low_limits_cap";
 		thermal-sensors = <&pm6150_bcl 2>;
@@ -648,57 +649,6 @@
 			vbat_lvl2:vbat-lvl2 {
 				temperature = <2600>;
 				hysteresis = <200>;
-				type = "passive";
-			};
-		};
-	};
-
-	pm6150-bcl-lvl0 {
-		disable-thermal-zone;
-		polling-delay-passive = <100>;
-		polling-delay = <0>;
-		thermal-governor = "step_wise";
-		thermal-sensors = <&pm6150_bcl 5>;
-		wake-capable-sensor;
-
-		trips {
-			bcl_lvl0: bcl-lvl0 {
-				temperature = <1>;
-				hysteresis = <1>;
-				type = "passive";
-			};
-		};
-	};
-
-	pm6150-bcl-lvl1 {
-		disable-thermal-zone;
-		polling-delay-passive = <100>;
-		polling-delay = <0>;
-		thermal-governor = "step_wise";
-		thermal-sensors = <&pm6150_bcl 6>;
-		wake-capable-sensor;
-
-		trips {
-			bcl_lvl1: bcl-lvl1 {
-				temperature = <1>;
-				hysteresis = <1>;
-				type = "passive";
-			};
-		};
-	};
-
-	pm6150-bcl-lvl2 {
-		disable-thermal-zone;
-		polling-delay-passive = <100>;
-		polling-delay = <0>;
-		thermal-governor = "step_wise";
-		thermal-sensors = <&pm6150_bcl 7>;
-		wake-capable-sensor;
-
-		trips {
-			bcl_lvl2: bcl-lvl2 {
-				temperature = <1>;
-				hysteresis = <1>;
 				type = "passive";
 			};
 		};
