--- a/arch/arm64/boot/dts/qcom/sdmmagpie-thermal-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-thermal-overlay.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2019, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -14,7 +14,6 @@
 
 &thermal_zones {
 	pm6150-tz {
-		disable-thermal-zone;
 		cooling-maps {
 			trip0_bat {
 				trip = <&pm6150_trip0>;
@@ -32,7 +31,6 @@
 	};
 
 	pm6150l-tz {
-		disable-thermal-zone;
 		cooling-maps {
 			trip0_cpu0 {
 				trip = <&pm6150l_trip0>;
@@ -127,17 +125,16 @@
 		};
 	};
 
-	pm6150-bcl-lvl0 {
-		disable-thermal-zone;
+	pm6150-vbat-lvl0 {
 		cooling-maps {
 			vbat_cpu6 {
-				trip = <&bcl_lvl0>;
+				trip = <&vbat_lvl0>;
 				cooling-device =
 					<&CPU6 THERMAL_MAX_LIMIT
 						THERMAL_MAX_LIMIT>;
 			};
 			vbat_cpu7 {
-				trip = <&bcl_lvl0>;
+				trip = <&vbat_lvl0>;
 				cooling-device =
 					<&CPU7 THERMAL_MAX_LIMIT
 						THERMAL_MAX_LIMIT>;
@@ -145,35 +142,16 @@
 		};
 	};
 
-	pm6150-bcl-lvl1 {
-		disable-thermal-zone;
+	pm6150-ibat-lvl0 {
 		cooling-maps {
 			ibat_cpu6 {
-				trip = <&bcl_lvl1>;
+				trip = <&ibat_lvl0>;
 				cooling-device =
 					<&CPU6 THERMAL_MAX_LIMIT
 						THERMAL_MAX_LIMIT>;
 			};
 			ibat_cpu7 {
-				trip = <&bcl_lvl1>;
-				cooling-device =
-					<&CPU7 THERMAL_MAX_LIMIT
-						THERMAL_MAX_LIMIT>;
-			};
-		};
-	};
-
-	pm6150-bcl-lvl2 {
-		disable-thermal-zone;
-		cooling-maps {
-			ibat_cpu6 {
-				trip = <&bcl_lvl2>;
-				cooling-device =
-					<&CPU6 THERMAL_MAX_LIMIT
-						THERMAL_MAX_LIMIT>;
-			};
-			ibat_cpu7 {
-				trip = <&bcl_lvl2>;
+				trip = <&ibat_lvl0>;
 				cooling-device =
 					<&CPU7 THERMAL_MAX_LIMIT
 						THERMAL_MAX_LIMIT>;
@@ -182,7 +160,6 @@
 	};
 
 	soc {
-		disable-thermal-zone;
 		cooling-maps {
 			soc_cpu6 {
 				trip = <&soc_trip>;
