--- a/arch/arm64/boot/dts/qcom/sdxprairie-v2-mtp-le-cpe.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdxprairie-v2-mtp-le-cpe.dtsi
@@ -22,7 +22,38 @@
 	qcom,force-warm-reboot;
 };
 
-&sdx_ext_ipc {
+/* delete pm8150b nodes */
+&thermal_zones {
+	/delete-node/ pm8150b-wp-therm;
+	/delete-node/ pm8150b_tz;
+	/delete-node/ pm8150b-ibat-lvl0;
+	/delete-node/ pm8150b-ibat-lvl1;
+	/delete-node/ pm8150b-vbat-lvl0;
+	/delete-node/ pm8150b-vbat-lvl1;
+	/delete-node/ pm8150b-vbat-lvl2;
+	/delete-node/ pm8150b-bcl-lvl0;
+	/delete-node/ pm8150b-bcl-lvl1;
+	/delete-node/ pm8150b-bcl-lvl2;
+	/delete-node/ soc;
+};
+
+&usb {
+	extcon = <&vbus_detect>;
+	qcom,smmu-s1-bypass;
+};
+
+&spmi_bus {
+	/delete-node/ qpnp,fg;
+	/delete-node/ bcl@1d00;
+	/delete-node/ qcom,usb-pdphy@1700;
+	/delete-node/ qcom,qpnp-smb5;
+	/delete-node/ adc_tm@3500;
+	/delete-node/ vadc@3100;
+	/delete-node/ qcom,pm8150b@2;
+	/delete-node/ qcom,pm8150b@3;
+};
+
+&qnand_1 {
 	status = "ok";
 };
 
@@ -60,4 +91,20 @@
 
 &mhi_net_device {
 	status = "ok";
+};
+
+&sdx_ext_ipc {
+	status = "ok";
+};
+
+&i2c_3 {
+	tavil_codec {
+		status = "disabled";
+	};
+};
+
+&soc {
+	sound-tavil {
+		status = "disabled";
+	};
 };
