--- a/arch/arm64/boot/dts/qcom/sm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150.dtsi
@@ -493,10 +493,10 @@
 			reg = <0 0x85700000 0 0x600000>;
 		};
 
-		xbl_aop_mem: xbl_aop_mem@85d00000 {
+		xbl_aop_mem: xbl_aop_mem@85e00000 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x85d00000 0x0 0x240000>;
+			reg = <0x0 0x85e00000 0x0 0x140000>;
 		};
 
 		sec_apps_mem: sec_apps_region@85fff000 {
@@ -984,12 +984,6 @@
 			compatible = "qcom,msm-imem-diag-dload";
 			reg = <0xc8 200>;
 		};
-
-		upload_cause@66c {
-			compatible = "qcom,msm-imem-upload_cause";
-			reg = <0x66c 4>;
-		};
-
 	};
 
 	restart@c264000 {
@@ -1415,11 +1409,12 @@
 
 	sdhc_1: sdhci@7c4000 {
 		compatible = "qcom,sdhci-msm-v5";
-		reg = <0x7c4000 0x1000>, <0x7c5000 0x1000>, <0x7C8000 0x8000>;
-		reg-names = "hc_mem", "cmdq_mem", "cmdq_ice";
+		reg = <0x7c4000 0x1000>, <0x7c5000 0x1000>;
+		reg-names = "hc_mem", "cmdq_mem";
 
 		interrupts = <0 641 0>, <0 644 0>;
 		interrupt-names = "hc_irq", "pwr_irq";
+		sdhc-msm-crypto = <&sdcc1_ice>;
 
 		qcom,bus-width = <8>;
 		qcom,large-address-bus;
@@ -1495,7 +1490,7 @@
 		qcom,bus-width = <4>;
 		qcom,large-address-bus;
 
-		qcom,clk-rates = <300000 400000 20000000 25000000
+		qcom,clk-rates = <400000 20000000 25000000
 				50000000 100000000 202000000>;
 		qcom,bus-speed-mode = "SDR12", "SDR25", "SDR50", "DDR50",
 				      "SDR104";
@@ -1628,14 +1623,15 @@
 
 	ufshc_mem: ufshc@1d84000 {
 		compatible = "qcom,ufshc";
-		reg = <0x1d84000 0x3000>, <0x1d90000 0x8000>;
-		reg-names = "ufs_mem", "ufs_ice";
+		reg = <0x1d84000 0x3000>;
 		interrupts = <0 265 0>;
 		phys = <&ufsphy_mem>;
 		phy-names = "ufsphy";
+		ufs-qcom-crypto = <&ufs_ice>;
 
 		lanes-per-direction = <1>;
 		dev-ref-clk-freq = <0>; /* 19.2 MHz */
+		spm-level = <5>;
 
 		clock-names =
 			"core_clk",
@@ -3087,12 +3083,21 @@
 		qcom,hw-settle-time = <200>;
 		qcom,pre-scaling = <1 1>;
 	};
+
+	quiet_therm {
+		reg = <ADC_GPIO4_PU2>;
+		label = "quiet_therm";
+		qcom,ratiometric;
+		qcom,hw-settle-time = <200>;
+		qcom,pre-scaling = <1 1>;
+	};
 };
 
 &pm6150l_adc_tm {
 	io-channels = <&pm6150l_vadc ADC_AMUX_THM1_PU2>,
 			<&pm6150l_vadc ADC_AMUX_THM2_PU2>,
-			<&pm6150l_vadc ADC_GPIO1_PU2>;
+			<&pm6150l_vadc ADC_GPIO1_PU2>,
+			<&pm6150l_vadc ADC_GPIO4_PU2>;
 
 	/* Channel nodes */
 	emmc_ufs_therm {
@@ -3109,6 +3114,12 @@
 
 	camera_flash_therm {
 		reg = <ADC_GPIO1_PU2>;
+		qcom,ratiometric;
+		qcom,hw-settle-time = <200>;
+	};
+
+	quiet_therm {
+		reg = <ADC_GPIO4_PU2>;
 		qcom,ratiometric;
 		qcom,hw-settle-time = <200>;
 	};
