--- a/arch/arm64/boot/dts/qcom/sm8150-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-pinctrl.dtsi
@@ -2782,12 +2782,12 @@
 		quat_tdm_din {
 			quat_tdm_din_sleep: quat_tdm_din_sleep {
 				mux {
-					pins = "gpio139", "gpio141";
+					pins = "gpio139";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio139", "gpio141";
+					pins = "gpio139";
 					drive-strength = <2>;   /* 2 mA */
 					bias-pull-down;         /* PULL DOWN */
 					input-enable;
@@ -2796,12 +2796,12 @@
 
 			quat_tdm_din_active: quat_tdm_din_active {
 				mux {
-					pins = "gpio139", "gpio141";
+					pins = "gpio139";
 					function = "qua_mi2s";
 				};
 
 				config {
-					pins = "gpio139", "gpio141";
+					pins = "gpio139";
 					drive-strength = <4>;   /* 4 mA */
 					bias-disable;           /* NO PULL */
 				};
@@ -2811,12 +2811,12 @@
 		quat_tdm_dout {
 			quat_tdm_dout_sleep: quat_tdm_dout_sleep {
 				mux {
-					pins = "gpio140", "gpio142";
+					pins = "gpio140";
 					function = "gpio";
 				};
 
 				config {
-					pins = "gpio140", "gpio142";
+					pins = "gpio140";
 					drive-strength = <2>;   /* 2 mA */
 					bias-pull-down;         /* PULL DOWN */
 					input-enable;
@@ -2825,12 +2825,12 @@
 
 			quat_tdm_dout_active: quat_tdm_dout_active {
 				mux {
-					pins = "gpio140", "gpio142";
+					pins = "gpio140";
 					function = "qua_mi2s";
 				};
 
 				config {
-					pins = "gpio140", "gpio142";
+					pins = "gpio140";
 					drive-strength = <4>;   /* 4 mA */
 					bias-disable;           /* NO PULL */
 					output-high;
