--- a/arch/arm64/boot/dts/qcom/sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150.dtsi
@@ -204,7 +204,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x400>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <1740>;
+			capacity-dmips-mhz = <2515>;
 			next-level-cache = <&L2_4>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -244,7 +244,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x500>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <1740>;
+			capacity-dmips-mhz = <2515>;
 			next-level-cache = <&L2_5>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -284,7 +284,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x600>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <1740>;
+			capacity-dmips-mhz = <2515>;
 			next-level-cache = <&L2_6>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -324,7 +324,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x700>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <1740>;
+			capacity-dmips-mhz = <2515>;
 			next-level-cache = <&L2_7>;
 			sched-energy-costs = <&CPU_COST_2 &CLUSTER_COST_2>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -557,11 +557,7 @@
 	firmware: firmware {
 		android {
 			compatible = "android,firmware";
-			shared_meta: vbmeta {
-				compatible = "android,vbmeta";
-				parts = "vbmeta,boot,system,vendor,dtbo,odm";
-			};
-			android_q_fstab: fstab {
+			android_fstab: fstab {
 				compatible = "android,fstab";
 				vendor {
 					compatible = "android,vendor";
@@ -684,12 +680,6 @@
 			compatible = "shared-dma-pool";
 			no-map;
 			reg = <0 0x9e400000 0 0x1400000>;
-		};
-
-		cdsp_sec_mem: cdsp_sec_regions {
-			compatible = "removed-dma-pool";
-			no-map;
-			reg = <0x0 0xa4c00000 0x0 0x3c00000>;
 		};
 
 		cont_splash_memory: cont_splash_region {
@@ -1336,7 +1326,7 @@
 		};
 	};
 
-	restart@c264000 {
+	msm_poweroff: restart@c264000 {
 		compatible = "qcom,pshold";
 		reg = <0xc264000 0x4>,
 		      <0x1fd3000 0x4>;
@@ -1846,7 +1836,6 @@
 		qcom,bark-time = <11000>;
 		qcom,pet-time = <9360>;
 		qcom,ipi-ping;
-		qcom,wakeup-enable;
 		qcom,scandump-sizes = <0x10100 0x10100 0x10100 0x10100
 		0x18100 0x18100 0x18100 0x18100>;
 	};
@@ -2281,6 +2270,7 @@
 		reg = <0x1d87000 0xda8>; /* PHY regs */
 		reg-names = "phy_mem";
 		#phy-cells = <0>;
+		ufs-qcom-crypto = <&ufs_ice>;
 
 		lanes-per-direction = <2>;
 
@@ -2296,11 +2286,11 @@
 
 	ufshc_mem: ufshc@1d84000 {
 		compatible = "qcom,ufshc";
-		reg = <0x1d84000 0x2500>, <0x1d90000 0x8000>;
-		reg-names = "ufs_mem", "ufs_ice";
+		reg = <0x1d84000 0x2500>;
 		interrupts = <0 265 0>;
 		phys = <&ufsphy_mem>;
 		phy-names = "ufsphy";
+		ufs-qcom-crypto = <&ufs_ice>;
 
 		lanes-per-direction = <2>;
 		dev-ref-clk-freq = <0>; /* 19.2 MHz */
@@ -3262,6 +3252,68 @@
 				 <DCC_READ 0x183a3a84 2 0>,
 				 <DCC_READ 0x18393500 80 0>,
 				 <DCC_READ 0x183a3500 80 0>,
+				 <DCC_READ 0x18200D04 1 0>,
+				 <DCC_READ 0x18230D04 1 0>,
+				 <DCC_READ 0x18322C18 1 0>,
+				 <DCC_READ 0x18324C18 1 0>,
+				 <DCC_READ 0x18327418 1 0>,
+				 <DCC_READ 0x18329418 1 0>,
+				 <DCC_READ 0x18321700 1 0>,
+				 <DCC_READ 0x18323700 1 0>,
+				 <DCC_READ 0x18325F00 1 0>,
+				 <DCC_READ 0x18327F00 1 0>,
+				 <DCC_READ 0x18321818 1 0>,
+				 <DCC_READ 0x18323818 1 0>,
+				 <DCC_READ 0x18326018 1 0>,
+				 <DCC_READ 0x18328018 1 0>,
+				 <DCC_READ 0x18321700 1 0>,
+				 <DCC_READ 0x18323700 1 0>,
+				 <DCC_READ 0x18325F00 1 0>,
+				 <DCC_READ 0x18327F00 1 0>,
+				 <DCC_READ 0x18284000 1 0>,
+				 <DCC_READ 0x18284004 1 0>,
+				 <DCC_READ 0x18284008 1 0>,
+				 <DCC_READ 0x1828400C 1 0>,
+				 <DCC_READ 0x18284010 1 0>,
+				 <DCC_READ 0x18284014 1 0>,
+				 <DCC_READ 0x18284018 1 0>,
+				 <DCC_READ 0x1828401C 1 0>,
+				 <DCC_READ 0x18284020 1 0>,
+				 <DCC_READ 0x18284024 1 0>,
+				 <DCC_READ 0x18284028 1 0>,
+				 <DCC_READ 0x18282000 1 0>,
+				 <DCC_READ 0x18282004 1 0>,
+				 <DCC_READ 0x18282008 1 0>,
+				 <DCC_READ 0x1828200C 1 0>,
+				 <DCC_READ 0x18282010 1 0>,
+				 <DCC_READ 0x18282014 1 0>,
+				 <DCC_READ 0x18282018 1 0>,
+				 <DCC_READ 0x1828201C 1 0>,
+				 <DCC_READ 0x18282020 1 0>,
+				 <DCC_READ 0x18282024 1 0>,
+				 <DCC_READ 0x18282028 1 0>,
+				 <DCC_READ 0x18280000 1 0>,
+				 <DCC_READ 0x18280004 1 0>,
+				 <DCC_READ 0x18280008 1 0>,
+				 <DCC_READ 0x1828000C 1 0>,
+				 <DCC_READ 0x18280010 1 0>,
+				 <DCC_READ 0x18280014 1 0>,
+				 <DCC_READ 0x18280018 1 0>,
+				 <DCC_READ 0x1828001C 1 0>,
+				 <DCC_READ 0x18280020 1 0>,
+				 <DCC_READ 0x18280024 1 0>,
+				 <DCC_READ 0x18280028 1 0>,
+				 <DCC_READ 0x18286000 1 0>,
+				 <DCC_READ 0x18286004 1 0>,
+				 <DCC_READ 0x18286008 1 0>,
+				 <DCC_READ 0x1828600C 1 0>,
+				 <DCC_READ 0x18286010 1 0>,
+				 <DCC_READ 0x18286014 1 0>,
+				 <DCC_READ 0x18286018 1 0>,
+				 <DCC_READ 0x1828601C 1 0>,
+				 <DCC_READ 0x18286020 1 0>,
+				 <DCC_READ 0x18286024 1 0>,
+				 <DCC_READ 0x18286028 1 0>,
 				 <DCC_READ 0x09050008 1 0>,
 				 <DCC_READ 0x09050078 1 0>,
 				 <DCC_READ 0x09601000 1 0>,
